Fix GitHub links jumping around on hover

--- a/assets/styles/main/repository.sass
+++ b/assets/styles/main/repository.sass
@@ -54,10 +54,11 @@
         background-image: inline-image('ui/github-forks.png')
 
   .tab
-    a[href^="https://github.com"]:hover,
-    a[href^="http://github.com"]:hover,
-    a[href^="https://www.github.com"]:hover,
-    a[href^="http://www.github.com"]:hover
-      background: transparent url(/images/icons/github.png) center right no-repeat
-      background-size: 10px
+    a[href^="https://github.com"],
+    a[href^="http://github.com"],
+    a[href^="https://www.github.com"],
+    a[href^="http://www.github.com"]
+      &:hover
+        background: transparent url(/images/icons/github.png) center right no-repeat
+        background-size: 10px
       padding-right: 18px
